fix: HTML syntax change

--- a/app/src/pages/Arena/Arena.css
+++ b/app/src/pages/Arena/Arena.css
@@ -1,6 +1,3 @@
-section.arena {
-  height: 100vh;
+article.arena {
   background-image: url('../../../public/arena.png');
-  background-repeat: no-repeat;
-  background-size: cover;
 }
