--- a/app/src/index.css
+++ b/app/src/index.css
@@ -2,19 +2,40 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Permanent Marker', cursive;
 }
 
 :root {
   --main-color: #5c78fe;
   --main-color-hover: #92a4ff;
   --background-color: #10206d;
+  --background-color-transparent: #101f6dbe;
   --light-color: #fff;
+  --error-color: #FFBA69;
+  --success-color: #6FB337;
+
+  --small-image-size: 75px;
+  --medium-image-size: 200px;
+  --border-radius: 5px;
 }
 
 html {
   background-color: var(--background-color);
   color: var(--main-color);
-  font-family: 'Lato', sans-serif;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 10px;
+}
+
+@media (min-width: 1981px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+article {
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 ul {
@@ -37,7 +58,7 @@ a:hover {
 
 div.container {
   position: absolute;
-  top: 20%;
+  top: 5vh;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -47,4 +68,49 @@ h1 {
   color: white;
   font-size: 6em;
   font-family: 'Permanent Marker', cursive;
+  text-align: center;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input {
+  font-size: .8em;
+  padding: .4em;
+  color: var(--light-color);
+  background-color: var(--main-color);
+  border: 2px solid var(--background-color);
+  border-radius: var(--border-radius);
+  outline: none;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+input[type="submit"] {
+  cursor: pointer;
+  transition: .3s;
+}
+
+button {
+  color: var(--light-color);
+  font-family: 'Permanent Marker', cursive;
+  border: 2px solid var(--background-color);
+  background-color: var(--main-color);
+  cursor: pointer;
+  transition: .3s;
+}
+
+button:hover {
+  background-color: var(--background-color);
+}
+
+input.outline {}
+
+input.outline:hover {
+  background-color: var(--main-color);
 }
