feat: Hall of fame implementation

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -14,6 +14,7 @@
   --error-color: #FFBA69;
   --success-color: #6FB337;
 
+  --tiny-image-size: 50px;
   --small-image-size: 75px;
   --medium-image-size: 200px;
   --border-radius: 5px;
